// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render Expenses with expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="mobile-only"
    >
      Expenses
    </div>
    <div
      className="desktop-only"
    >
      Expense
    </div>
    <div
      className="desktop-only"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <Expense
      amount={195}
      createdAt={0}
      description="Gum"
      id="1"
      key="1"
      notes=""
    />
    <Expense
      amount={109500}
      createdAt={-345600000}
      description="Rent"
      id="2"
      key="2"
      notes=""
    />
    <Expense
      amount={120000}
      createdAt={345600000}
      description="Credit Card"
      id="3"
      key="3"
      notes=""
    />
  </div>
</div>
`;

exports[`should render expense list without items 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="mobile-only"
    >
      Expenses
    </div>
    <div
      className="desktop-only"
    >
      Expense
    </div>
    <div
      className="desktop-only"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item list-item--message"
    >
      <span>
        Enter your first expense
      </span>
    </div>
  </div>
</div>
`;
